--- a/calemissions.html
+++ b/calemissions.html
@@ -1,50 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">      
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculate Emissions</title>
-    <link rel="stylesheet" href="Styling/calemissions.css">
-    <script src="JS/calemissions.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculate Emissions</title>
+  <link rel="stylesheet" href="Styling/calemissions.css">
 </head>
 <body>
-    <header>
-        <h1>Calculate Emissions</h1>
-    </header>
-    <main>
-        <section class="input-container">
-            <h2>Fuel Emissions</h2>
-            <div class="input-group">
-                <label for="fuel-type">Fuel Type:</label>
-                <select id="fuel-type">
-                    <option value="petrol">Petrol</option>
-                    <option value="diesel">Diesel</option>
-                </select>
-            </div>
-            <div class="input-group">
-                <label for="fuel-quantity">Quantity (Liters):</label>
-                <input type="number" id="fuel-quantity" min="0" step="0.1">
-            </div>
-            <div class="input-group">
-                <label for="vehicle-type">Vehicle Type:</label>
-                <select id="vehicle-type">
-                    <option value="two-wheeler">Two Wheeler</option>
-                    <option value="four-wheeler">Four Wheeler</option>
-                </select>
-            </div>
-        </section>
-
-        <section class="input-container">
-            <h2>Energy Consumption</h2>
-            <div class="input-group">
-                <label for="volts">Volts:</label>
-                <input type="number" id="volts" min="0">
-            </div>
-        </section>
-        <button type="button" id="calculate-button" onclick="animateOnClick()">Calculate</button>
-        <div id="loading-animation">
-            <div class="spinner"></div>
-          </div>                  
-    </main>
+  <header>
+    <h1>Calculate Emissions</h1>
+  </header>
+  <main>
+    <section class="input-container">
+      <h1>Car Emissions</h1>
+      <div class="input-group">
+        <label for="distance-value">Distance:</label>
+        <input type="number" id="distance-value" min="0" required>
+      </div>
+      <div class="input-group">
+        <label for="distance-unit">Unit:</label>
+        <select id="distance-unit">
+          <option selected>Please select</option>
+          <option value="km">km</option>
+          <option value="mi">mi</option>
+        </select>
+        </div>
+  
+        <div class="input-group">
+          <label for="vehicle-model">Vehicle Model ID:</label>
+          <input type="text" id="vehicle-model" placeholder="Enter Vehicle Model ID" pattern="[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}">
+      </div>
+    </section>
+    <button type="button" id="calculate-button">Ca  lculate</button>
+    <div id="loading-animation">
+      <div class="spinner"></div>
+    </div>
+    <script src="JS/calemissions.js"></script>
+    <script src="JS/results2.js"></script>
+  </main>
+  <script>
+    document.getElementById('calculate-button').addEventListener('click', fetchEmissionsData);
+</script>
 </body>
 </html>
